--- a/firework.html
+++ b/firework.html
@@ -40,7 +40,12 @@
 		</symbol>
 	</svg>
 </div>
+<div>
+	<br>
+	<br>
 
+	<a href="./index1.html">Xem ai xinh nhất nè !!! </a>
+</div>
 <!-- App -->
 <div class="container">
 	<div class="loading-init">
@@ -116,6 +121,7 @@
 				<div class="credits">
 					Passionately built Sayn Achhava.
 				</div>
+				
 			</div>
 		</div>
 	</div>
