--- a/index1.html
+++ b/index1.html
@@ -8,10 +8,12 @@
 </head>
 <style>
 	body {
-		background-image: url(./bg.png);
+		background-image: url(./Web_Photo_Editor.jpg);
+		background-repeat: no-repeat;
+		background-repeat: space;
 	}
 </style>
 <body>
-	
+	<a href="./firework.html">Xem pháo hoa tiếp</a>
 </body>
 </html>
